--- a/quiz/index.html
+++ b/quiz/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<title>Segredo Japonês</title>
+<title>Cientistas Encontram</title>
 <head>
 
 <meta charset="utf-8">
