--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
             <!-- Headline -->
             <h3 class="my-4"><b>CIENTISTAS DESCOBREM <span style="color:red;">SUBSTÂNCIA OCULTA NO CORPO</span> DE TODAS AS PESSOAS MAGRAS!</b></h3>  
-             <h14 class="my-4"><b> E como elevar o nível dessa substância pode<span style="color:red;"> derreter muita gordura</span></b></h14>  
+             h14 class="my-4"><b> E como você pode elevar essa susbtância e <span style="color:red;">mudar todo o seu guarda roupa em 21 dias</span></b></h14>
 
             <!-- VSL -->
 
